2013-Dec-12 salnikov	Tag V07-02-11.  Derived from psddldata tag V00-04-55 and psddl V00-12-09.  Fixing bug in DDL definition of Ipimb::ConfigV1::capacitorValues(),
                                        Small changes in Andor config class to support HDF5 schema. Removed unnecessary methods from couple of EVR classes.  
2013-Dec-12 salnikov	Tag V07-02-10.  Derived from psddldata tag V00-04-53 and psddl V00-12-09.  Generating implementation of EpixSampler::ConfigV1::sampleInterval_sec().
2013-Nov-12 salnikov	Tag V07-02-07.  Derived from psddldata tag V00-04-47 and psddl V00-12-04.  Added capacitorValues method to ipimb Config types.
2013-Sep-20 weaver	Tag V07-00-03.  Derived from psddldata tag V00-04-37 and psddl V00-08-14.  Added BldAcqADCV1 and TimePix::DataV2(DataV1&) ctor.
2013-Sep-18 weaver	Tag V07-00-02.  Derived from psddldata tag V00-04-35.  Moved xtc/SrcAlias to psddl/alias.ddl.h.
2013-Sep-16 weaver	Tag V07-00-01.  Derived from psddldata tag V00-04-33.
2012-Dec-21 caf         Added Timepix Config V3.
2012-Apr-03 tomytsai    Added Ocean Optics spectrometer and EpicsConfig
2012-Jan-05 caf         Added Timepix detector.
2011-Nov-08 caf     Tag V03-00-01   Modified some data types for portability.
2011-Nov-02 caf     Tag V03-00-00.
2011-Oct-03 caf         Added Gsc16ai detector.
2011-Sep-27 caf         New xtcmodify feature: "-s <selectpayloadname>" requests one payoad name
          to be written to output file.
2011-Sep-26 jackp     Added Fexamp detector
2011-Sep-07 weaver  Tag V02-13-09   XtcMonitorClient retries all message queue opens - removed race with XtcMonitorServer.
          Added Cspad2x2.
2011-Aug-09 weaver      Added BldDataPimV1.
2011-July-20  weaver  Tag V02-12-00 Added XRT BLD cameras.
2011-May-31 weaver  Tag V02-11-01 Added BldDataEbeamV2.
2011-May-12 weaver      Added Lusi Config V2s to match Ipimb upgrade.
2011-Apr-04 weaver      Added postmarks to mq_send calls from XtcMonitorServer to allow